--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
-               <dependency>
+        <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
@@ -66,6 +66,12 @@
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>5.2.2</version>
+        </dependency>
+        
+        
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
         </dependency>
          
          
